# efuzz

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/efuzz/: CMakeLists.txt  encode.cpp  encode.hpp  train_encoder.hpp
src/efuzz/neural_network/: CMakeLists.txt  neural_network.cpp  neural_network.hpp  neural_network_diff.cpp
tests/: CMakeLists.txt  encode.cpp  train_encoder.cpp
